--- a/deverseAssets/subgraph.yaml
+++ b/deverseAssets/subgraph.yaml
@@ -8,6 +8,7 @@ dataSources:
     source:
       address: "0x4663526746b8fDC6e67EEe35489f2D7706754d63"
       abi: Asset
+      startBlock: 27077238
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
